[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD and Menus/Scripts/SmartButton.gd" type="Script" id=1]
[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD and Menus/menu_click.wav" type="AudioStream" id=3]
[ext_resource path="res://HUD and Menus/menu_hover.wav" type="AudioStream" id=4]

[sub_resource type="AudioStreamRandomPitch" id=1]
audio_stream = ExtResource( 4 )
random_pitch = 1.02

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 3 )
random_pitch = 1.02

[node name="SmartButton" type="Button"]
margin_right = 12.0
margin_bottom = 20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
hover_sound = SubResource( 1 )
click_sound = SubResource( 2 )

[node name="sound_player" parent="." instance=ExtResource( 2 )]
[connection signal="button_down" from="." to="." method="_on_SmartButton_button_down"]
[connection signal="focus_entered" from="." to="." method="_on_SmartButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_SmartButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_SmartButton_mouse_entered"]
